app/styles/components/_panel.scss
.panel {
  background-color: $color-secondary;
  max-width: 954px;
  padding: 32px;

  &--dense {
    padding: 24px;
  }

  &--small {
    width: 466px;
  }

  &--translucid {
    background-color: $color-secondary-translucid;
  }
}

@media (max-width: 768px) {
  .panel {
    padding: 8px;
  }
}

